# dsntk-rs

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUE-markdown-feel-test-coverage.md  PLAN-issue-7.md
.github/workflows/: ci.yml
crates/dsntk-node/: Cargo.toml  package.json
crates/dsntk-node/src/: lib.rs
docs/superpowers/plans/: 2026-04-08-evaluation-viewer.md  2026-04-09-evaluation-gaps.md
docs/superpowers/specs/: 2026-04-08-evaluation-viewer-design.md  2026-04-09-evaluation-gaps-design.md
dsntk/: Cargo.toml
dsntk/src/: actions.rs  errors.rs  main.rs
dsntk/src/templates/: mod.rs
dsntk/src/templates/compliance-checker/: README.md
dsntk/src/templates/insurance-pricing/: README.md
dsntk/src/templates/loan-eligibility/: README.md
dsntk/src/templates/order-routing/: README.md
dsntk/src/templates/scorecard/: README.md
dsntk/src/templates/tax-calculator/: README.md
examples/: Cargo.toml
examples/src/: lib.rs
examples/src/decision_tables/horizontal/: H_000010.md  I_xxx1xx.ctx  copy-test.ctx  copy-test.md  minimal-test.ctx  minimal-test.md  nz-probation-test-1-compliant.ctx  nz-probation-test-2-non-compliant.ctx  nz-probation-test-3-requires-review.ctx  nz-probation-test-rule1.ctx  nz-probation-test-rule8.ctx  nz-probation-trial-dmn-table.md  simple-rule-test.ctx  simple-test.md  test-discount.ctx  test-discount.md  test-nz-probation.sh
examples/src/decision_tables/vertical/: test-vertical.ctx
examples/src/tests/: markdown_decision_tables.rs  mod.rs
feel-evaluator/: Cargo.toml
feel-evaluator/src/: evaluator_java.rs
feel-grammar/src/: feel.y
feel-parser/src/: lalr.rs  lexer.rs  parser.rs
feel-parser/src/tests/: mod.rs
feel-parser/tests/: decision_table_unary_tests.rs  expression_unary_tests.rs  simple_range_literal.rs  temporal_functions.rs
feel/src/: closure.rs  context.rs
feel/src/tests/: context.rs  mod.rs
model-evaluator/: Cargo.toml
model-evaluator/benches/compatibility/: mod.rs
model-evaluator/src/: decision.rs  decision_table.rs  lib.rs  model_builder.rs  model_definitions.rs  model_evaluator.rs  trace.rs
model-evaluator/src/tests/: markdown_eval.rs  mod.rs
model-evaluator/src/tests/temporal_functions/: age_calculations.rs  date_time_comparisons.rs  duration_functions.rs  mod.rs  today_function.rs
model/src/: model.rs
recognizer/src/tests/: test_recognizer.rs
server/: Cargo.toml
server/src/: lib.rs  project_handlers.rs  server.rs  trace_handlers.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
type-registry/: Cargo.toml
type-registry/src/: errors.rs  exporter.rs  front_matter.rs  graph.rs  json_schema_parser.rs  lib.rs  primitive.rs  registry.rs  resolver.rs  scanner.rs  ts_parser.rs
type-registry/src/tests/: mod.rs  test_exporter.rs  test_front_matter.rs  test_graph.rs  test_json_schema.rs  test_loan_pricing.rs  test_loan_pricing_e2e.rs  test_primitive.rs  test_registry.rs  test_resolver.rs  test_scanner.rs  test_ts_parser.rs
type-registry/src/tests/fixtures/commercial_lending/: README.md  scenarios.json
type-registry/src/tests/fixtures/commercial_lending/decisions/: accounts_quality_check.md  collateral_adequacy.md  conditions_of_approval.md  credit_score_classification.md  dscr_calculation.md  final_approval.md  ltv_calculation.md  pricing_tier.md  property_risk_rating.md  rate_adjustments.md  sector_risk_assessment.md
type-registry/src/tests/fixtures/commercial_lending/inputs/: applicant.md  bureau_report.md  financial_statements.md  loan_request.md  property.md
type-registry/src/tests/fixtures/commercial_lending/knowledge_sources/: commercial_lending_policy.md
type-registry/src/tests/fixtures/commercial_lending/types/: inputs.ts
type-registry/src/tests/fixtures/graph_bad_governed_by/decisions/: not_a_ks.md  pricing.md
type-registry/src/tests/fixtures/graph_bad_supported_by/decisions/: pricing.md
type-registry/src/tests/fixtures/graph_bad_supported_by/knowledge/: not_a_bkm.md
type-registry/src/tests/fixtures/graph_cycle/decisions/: a.md  b.md
type-registry/src/tests/fixtures/graph_governed_by/decisions/: pricing.md
type-registry/src/tests/fixtures/graph_governed_by/inputs/: customer.md
type-registry/src/tests/fixtures/graph_governed_by/regulatory/: regulations.md
type-registry/src/tests/fixtures/graph_missing_link/decisions/: orphan.md
type-registry/src/tests/fixtures/graph_simple/decisions/: eligibility.md
type-registry/src/tests/fixtures/graph_simple/inputs/: applicant.md  loan_amount.md
type-registry/src/tests/fixtures/loan_pricing/decisions/: affordability_classification.md  affordability_result.md  applicant_input.md  applicant_profile_input.md  dti_calculation.md  income_verification_modifier.md
type-registry/src/tests/fixtures/loan_pricing/regulatory/: credit_policy_framework.md
type-registry/src/tests/fixtures/loan_pricing/types/: affordability.ts  applicant.ts  classifiers.ts
ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: accessibility.spec.ts  bridge-integration.spec.ts  editor-view.spec.ts  fixtures.ts  project-picker.spec.ts  transitions.spec.ts  welcome-screen.spec.ts
ui/src/: app.css  app.html
ui/src/lib/: bridge.ts  types.ts
ui/src/lib/components/: DecisionTableRenderer.svelte  DmnNode.svelte  InputPanel.svelte  OutputPanel.svelte  ProjectPicker.svelte  WelcomeScreen.svelte
ui/src/routes/: +layout.svelte  +page.svelte
viewer/: README.md  package-lock.json  package.json  vite.config.ts
viewer/src/: app.css
viewer/src/lib/: api.ts  layout.ts  projectLayout.ts  projectStores.ts  stores.ts  types.ts
viewer/src/lib/components/: AnimatedEdge.svelte  (+11 more)
viewer/src/routes/: +page.svelte
workspace/src/: workspaces.rs
(+78 files in other folders)
