[package]
name = "dsntk-examples"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | Examples"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "examples"]
documentation = "https://docs.rs/dsntk-examples"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
walkdir = { workspace = true }
dsntk-recognizer = { workspace = true }
dsntk-model-evaluator = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-model = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-feel-evaluator = { workspace = true }
