[package]
name = "dsntk-server"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | API server"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "server"]
documentation = "https://docs.rs/dsntk-server"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
tck = []

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
antex = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dsntk-common = { workspace = true }
dsntk-evaluator = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-feel-evaluator = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-feel-number = { workspace = true }
dsntk-macros = { workspace = true }
dsntk-model = { workspace = true }
dsntk-model-evaluator = { workspace = true }
dsntk-recognizer = { workspace = true }
dsntk-type-registry = { workspace = true }
dsntk-workspace = { workspace = true }
walkdir = { workspace = true }
