[package]
name = "dsntk-desktop"
version = "0.3.0-dev"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "dsntk | DecisionToolkit | Visual DMN Explorer desktop application"
repository = "https://github.com/DecisionToolkit/dsntk-rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"
default-run = "dsntk-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
dsntk-common = { path = "../common" }
dsntk-feel = { path = "../feel" }
dsntk-feel-evaluator = { path = "../feel-evaluator" }
dsntk-feel-parser = { path = "../feel-parser" }
dsntk-recognizer = { path = "../recognizer" }
dsntk-type-registry = { path = "../type-registry" }
dirs-next = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
