[package]
name = "dsntk-type-registry"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | Type registry for Markdown-native DMN"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "types"]
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-macros = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
petgraph = { workspace = true }
walkdir = { workspace = true }
